IMPALA-6694: fix "buffer pool" child profile order

The bug is that child profiles can be re-ordered when being sent between
an executor and a coordinator. This occurs if child profile A is present
in one update, then another child profile B is inserted at a position
before A and is sent to the coordinator in a subsequent update. The
algorithm for merging profiles did not preserve the order in that case.

The algorithm is fixed to preserve order when the relative order of
child profiles is consistent between all updates.

Testing:
Added a targeted unit test.

Change-Id: I230f0673edf20a846fdb13191b7a292d329c1bb8
Reviewed-on: http://gerrit.cloudera.org:8080/9749
Reviewed-by: Lars Volker <lv@cloudera.com>
Tested-by: Impala Public Jenkins